--- a/mysite/usermanager/templates/registration/login.html
+++ b/mysite/usermanager/templates/registration/login.html
@@ -3,6 +3,9 @@
 {%load crispy_forms_tags%}
 
 {%block content%}
+<style>
+    input {max-width: 12em;}
+</style>
 <form method="post" class="form-group">
     {%csrf_token%}
     {{form|crispy}}
